[gd_scene load_steps=12 format=2]

[ext_resource path="res://gameplay/main/main.gd" type="Script" id=1]
[ext_resource path="res://gameplay/warning_label/warning_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameplay/main/levels/0.gd" type="Script" id=3]
[ext_resource path="res://gameplay/player_train/player_train.tscn" type="PackedScene" id=4]
[ext_resource path="res://gameplay/railtrack/railtrack.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameplay/destination_area/destination_area.tscn" type="PackedScene" id=6]
[ext_resource path="res://menus/level_win_menu/level_win_menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://gameplay/main/levels/1.gd" type="Script" id=8]
[ext_resource path="res://gameplay/main/levels/2.gd" type="Script" id=9]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 10 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="railtrack" parent="." instance=ExtResource( 5 )]

[node name="player_train" parent="railtrack" instance=ExtResource( 4 )]
position = Vector2( -323.269, -1.12244 )
z_index = 1

[node name="destination_area" parent="." instance=ExtResource( 6 )]
position = Vector2( 383.882, -112.246 )

[node name="warning_label" parent="." instance=ExtResource( 2 )]
visible = false

[node name="levels" type="Node" parent="."]

[node name="0" type="Node2D" parent="levels"]
script = ExtResource( 3 )

[node name="1" type="RichTextLabel" parent="levels/0"]
visible = false
margin_left = 45.0
margin_top = 95.0
margin_right = 289.0
margin_bottom = 177.0
text = "1. This is the 
destination point 
THE COW FESTIVAL! ->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="RichTextLabel" parent="levels/0"]
visible = false
margin_left = 385.0
margin_top = 46.0
margin_right = 628.0
margin_bottom = 167.0
bbcode_text = "<-
2. You have to take here as many passengers as indicated on the right number"
text = "<-
2. You have to take here as many passengers as indicated on the right number"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="RichTextLabel" parent="levels/0"]
visible = false
margin_left = 688.0
margin_top = 346.0
margin_right = 894.0
margin_bottom = 522.0
text = "<- 
3. Cows must be 
picked at 
these farms"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="RichTextLabel" parent="levels/0"]
visible = false
margin_left = 727.0
margin_top = 623.0
margin_right = 899.0
margin_bottom = 717.0
text = "4. Maybe if you click ^
on this vertex
and remove it... "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="RichTextLabel" parent="levels/0"]
visible = false
margin_left = 457.0
margin_top = 732.0
margin_right = 858.0
margin_bottom = 824.0
text = "5. You can always restart the level by cliking here ->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Node2D" parent="levels"]
script = ExtResource( 8 )

[node name="1" type="RichTextLabel" parent="levels/1"]
visible = false
margin_left = 431.811
margin_top = 336.298
margin_right = 603.811
margin_bottom = 399.298
text = "1. You can also add 
new vertices too"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="RichTextLabel" parent="levels/1"]
visible = false
margin_left = 474.406
margin_top = 432.865
margin_right = 722.406
margin_bottom = 453.865
text = "2. Click on this edge ->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="RichTextLabel" parent="levels/1"]
visible = false
margin_left = 840.729
margin_top = 265.027
margin_right = 1013.73
margin_bottom = 360.027
text = "<- 
3. Click again close to
this farm  to create 
the new vertex"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Node2D" parent="levels"]
script = ExtResource( 9 )

[node name="1" type="Label" parent="levels/2"]
margin_left = 6.91144
margin_top = 703.044
margin_right = 346.911
margin_bottom = 751.044
text = "1. From now on, all levels will have a maximum number of
actions (add / remove vertex) allowed ->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pickup_areas" type="Node2D" parent="."]

[node name="gui" type="Node" parent="."]

[node name="level_win_menu" parent="gui" instance=ExtResource( 7 )]
visible = false

[node name="restart_level_button" type="Button" parent="gui"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -126.487
margin_top = -35.4597
margin_right = -34.4871
margin_bottom = -15.4597
text = "Restart level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remaining_actions_label" type="Label" parent="gui"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -43.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 1 )
text = "Remaining actions: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="game_over" from="." to="." method="_on_main_game_over"]
[connection signal="n_remaining_actions_updated" from="railtrack" to="." method="_on_railtrack_n_remaining_actions_updated"]
[connection signal="node_added" from="railtrack" to="railtrack/player_train" method="_on_railtrack_node_added"]
[connection signal="node_removed" from="railtrack" to="railtrack/player_train" method="_on_railtrack_node_removed"]
[connection signal="warning_added" from="railtrack" to="." method="_on_railtrack_warning_added"]
[connection signal="all_passengers_left" from="destination_area" to="." method="_on_destination_area_all_passengers_left"]
[connection signal="continue_pressed" from="gui/level_win_menu" to="." method="_on_level_win_menu_continue_pressed"]
[connection signal="button_down" from="gui/restart_level_button" to="." method="_on_restart_level_button_button_down"]
